# octasoma

./: .gitignore  Cargo.toml  OCTACORE_HANDOFF.md  README.md  install.sh  octasoma_agent.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  integration-ecosystem.md  octacore.md  precision-sketch.md  scirust-improvements.md
examples/: octacore_cascade.rs  pareto_tuning.rs  pipeline_bench_text.rs  recall_global_bench.rs
octacore/: Cargo.toml  README.md
octacore/docs/: MCP.md
octacore/src/: lib.rs  mcp.rs
scripts/: extract_octacore.sh
src/: ffi.rs  gpu.rs  hybrid.rs  kernel.rs  lib.rs  sharded.rs  sketch.rs
tests/: agent_kernel.rs
viewer/: README.md  index.html
