[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "octasoma"
version = "0.3.0"
description = "3D Fractal Semantic Memory engine with PCA projection and LZ4 compression"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OctaSoma Contributors" }]
keywords = ["octree", "fractal", "semantic-memory", "pca", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["extension-module"]
python-source = "."
module-name = "octasoma"
bindings = "pyo3"
